--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-bcryptjs: ^2.4.3
-express: ^4.18.2
-mongoose: ^7.1.0
-nodemon: ^2.0.22
+bcryptjs==^2.4.3
+express==^4.18.2
+mongoose==^7.1.0
+nodemon==^2.0.22
